--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -229,6 +229,7 @@
         font-weight: 500;
         text-transform: uppercase;
         background-color: #dcdcdc;
+        color: #0d0d0d;
         width: 100%;
         border: none;
         text-align-last: left;
