--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -73,11 +73,44 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            color: #fff;
         }
     }
     &__bottom {
         background-color: #343434;
         color: #fff;
         padding: 10px 0;
+    }
+}
+
+@media (max-width: 1100px) {
+    .footer {
+        &__container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+        }
+        &__form {
+            &-content {
+                display: flex;
+                flex-direction: column;
+            }
+            &-button {
+                height: 40px;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .footer {
+        &__container {
+            padding: 0 10px;
+        }
+        &__form {
+            width: 100%;
+            text-align: center;
+        }
     }
 }
